--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 <div class="row">
   <div class="column">
     <img src="./image/temple5.jpg" alt="The MaCho temple, the very first taoist temple in the country and one of the biggest temple outside of china. It is located on a hill downtown san fernando and over looking the south china sea, a perfect location for the so called “Goddess of the Sea” and “Queen of Heaven”. it was built by the Tourism Minister Jose D. Aspiras, with the cooperation of the Chinese community in the Philippines." onclick="myFunction(this);">
-    <div class="desc">MACHO TEMPLE AT SAN FERNANDO CITY, LA UNION</div>
+    <div class="desc">MACHO TEMPLE AT SAN FERNANDO,LA UNION</div>
   </div>
   <div class="column">
     <img src="./image/eco.jpg" alt="THE ECO PARK - This eco-tourism site is located at Sta. Rita West and Sta. Rita Central, in Agoo, La Union. If you are coming from Manila, you will have to pass by the town proper. The landmark you might want to take note is the Universal Leaf Philippines (a tobacco company that is hard to miss along the highway going to Ilocos)." onclick="myFunction(this);">
