--- a/guide.html
+++ b/guide.html
@@ -58,7 +58,11 @@
   <br/>   <br/>
   Who can travel to La Union? For tourism purposes, La Union currently accepts residents and visitors from NCR+, MGCQ, and GCQ areas. Regardless of vaccination status, all those entering La Union for tourism and leisure purposes are required to register and book at the TARA NA Visita System here.
   In the interest of everyone’s health and well-being, the Philippines Department of Tourism (DOT) ensures that tourism stakeholders comply with the protocols and precautionary measures set by the World Health Organization (WHO) and the Department of Health (DOH). The DOT also actively promotes simple but effective habits that the public can adapt to help contain the spread of Covid-19.
-
+<br/><br/> Click the button below for travel advisories <br/>
+   <a href = "https://www.pinoyadventurista.com/2021/10/la-union-travel-requirements.html"> 
+    <button class="btn">Travel Requirements </button> </a>
+  <a href = "https://app.philippines.travel/articles/la-union-entry-protocols"> 
+    <button class="btn">La Union Protocols</button> </a>
   
  
   <br/><br/>
