--- a/guide.html
+++ b/guide.html
@@ -63,6 +63,8 @@
     <button class="btn">Travel Requirements </button> </a>
   <a href = "https://app.philippines.travel/articles/la-union-entry-protocols"> 
     <button class="btn">La Union Protocols</button> </a>
+   <a href = "https://www.klook.com/en-PH/blog/la-union-travel-requirements/"> 
+    <button class="btn">Safety Guidelines</button> </a>
   
  
   <br/><br/>
